# mongo-playground

./: .gitignore  pyproject.toml  requirements.txt
mongo_playground/: .env  custom.css  mongo_playground.py  mongo_playground_st.py  python-mongodb-test.py
mongo_playground/templates/: index.html
mongo_playground/test_data/: sample-data-query-2.json  sample-input-2.json  sample-input.json  sample-output-2.json  sample-output.json
